# mayin_tarlasi

./: .gitignore  CMakeLists.txt  README.md  main.cpp
